fix: force scrollbar all pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html {
+  overflow-y: scroll;
+}
+
 @theme {
     /* Mapeamento das variáveis das fontes configuradas no layout */
     --font-headline: var(--font-newsreader), serif;
